aggiunta nav-player

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css">
+    <script src="https://kit.fontawesome.com/3fe9dab609.js" crossorigin="anonymous"></script>
     <title>Web app Spotify</title>
   </head>
 
@@ -119,6 +120,38 @@
               </a>
             </div>
             <!-- box2 -->
+            <div class="box due">
+              <a href="#">
+                <img src="img/stranger.jpeg" alt="">
+                <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
+                <p>Kyle Dixon & Michael Stein</p>
+              </a>
+            </div>
+            <!-- box1 -->
+            <div class="box uno">
+              <a href="#">
+                <img src="img/metal_lifting.jpg" alt="">
+                <h4>Heavy Metal</h4>
+                <p>Subtitle</p>
+              </a>
+            </div>
+            <!-- box1 -->
+            <div class="box uno">
+              <a href="#">
+                <img src="img/metal_lifting.jpg" alt="">
+                <h4>Heavy Metal</h4>
+                <p>Subtitle</p>
+              </a>
+            </div>
+            <!-- box1 -->
+            <div class="box uno">
+              <a href="#">
+                <img src="img/metal_lifting.jpg" alt="">
+                <h4>Heavy Metal</h4>
+                <p>Subtitle</p>
+              </a>
+            </div>
+            <!-- box1 -->
             <div class="box uno">
               <a href="#">
                 <img src="img/metal_lifting.jpg" alt="">
@@ -147,7 +180,40 @@
 
     <!-- barra del player -->
     <div class="navbar-player">
+      <!-- parte player di sx -->
+      <div class="player player-sx">
+        <img src="img/sinister.jpeg" alt="">
+        <span>
+          <h5>Sinister</h5>
+          <p>Brano Nome</p>
+        </span>
+        <a href="#"><i class="far fa-heart"></i></a>
+        <a href="#"><i class="far fa-folder"></i></a>
+      </div>
+      <!-- parte player cx -->
+      <div class="player player-cx">
+        <div class="su">
+          <a href="#"><i class="fas fa-random"></i></a>
+          <a href="#"><i class="fas fa-step-backward"></i></a>
+          <a id="i-play" href="#"><i class="far fa-play-circle"></i></a>
+          <a href="#"><i class="fas fa-step-forward"></i></a>
+          <a href="#"><i class="fas fa-redo"></i></a>
+        </div>
+        <div class="barra-dx">
 
+        </div>
+      </div>
+      <!-- parte player dx -->
+      <div class="player player-dx">
+        <div class="sx">
+          <a href="#"><i class="fas fa-list"></i></a>
+          <a href="#"><i class="fas fa-tv"></i></a>
+          <a href="#"><i class="fas fa-volume-up"></i></a>
+        </div>
+        <div class="barra-dx">
+
+        </div>
+      </div>
     </div>
 
   </body>
