navbar player fixata

--- a/index.html
+++ b/index.html
@@ -182,35 +182,37 @@
     <div class="navbar-player">
       <!-- parte player di sx -->
       <div class="player player-sx">
-        <img src="img/sinister.jpeg" alt="">
-        <span>
-          <h5>Sinister</h5>
-          <p>Brano Nome</p>
-        </span>
+        <div>
+          <img src="img/sinister.jpeg" alt="">
+        </div>
+        <div>
+          <h4>Sinister</h4>
+          <a href="#">Brano Nome</a>
+        </div>
         <a href="#"><i class="far fa-heart"></i></a>
         <a href="#"><i class="far fa-folder"></i></a>
       </div>
       <!-- parte player cx -->
       <div class="player player-cx">
-        <div class="su">
-          <a href="#"><i class="fas fa-random"></i></a>
-          <a href="#"><i class="fas fa-step-backward"></i></a>
-          <a id="i-play" href="#"><i class="far fa-play-circle"></i></a>
-          <a href="#"><i class="fas fa-step-forward"></i></a>
-          <a href="#"><i class="fas fa-redo"></i></a>
-        </div>
-        <div class="barra-dx">
+        <a href="#"><i class="fas fa-random"></i></a>
+        <a href="#"><i class="fas fa-step-backward"></i></a>
+        <a id="i-play" href="#"><i class="far fa-play-circle"></i></a>
+        <a href="#"><i class="fas fa-step-forward"></i></a>
+        <a href="#"><i class="fas fa-redo"></i></a>
+        <div class="conteiner-barra">
+          <span>0:25</span>
+          <div class="barra-player">
 
+          </div>
+          <span>4:25</span>
         </div>
       </div>
       <!-- parte player dx -->
       <div class="player player-dx">
-        <div class="sx">
-          <a href="#"><i class="fas fa-list"></i></a>
-          <a href="#"><i class="fas fa-tv"></i></a>
-          <a href="#"><i class="fas fa-volume-up"></i></a>
-        </div>
-        <div class="barra-dx">
+        <a href="#"><i class="fas fa-list"></i></a>
+        <a href="#"><i class="fas fa-tv"></i></a>
+        <a href="#"><i class="fas fa-volume-up"></i></a>
+        <div class="barra-player-dx">
 
         </div>
       </div>
