fix img, aggiunta overflow da fixare

--- a/index.html
+++ b/index.html
@@ -123,54 +123,87 @@
             <div class="box due">
               <a href="#">
                 <img src="img/stranger.jpeg" alt="">
-                <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
+                <h4>Stranger Things, Vol. 1 (a Netflix Original)</h4>
                 <p>Kyle Dixon & Michael Stein</p>
               </a>
             </div>
-            <!-- box1 -->
+            <!-- box3 -->
             <div class="box uno">
               <a href="#">
-                <img src="img/metal_lifting.jpg" alt="">
-                <h4>Heavy Metal</h4>
+                <img src="img/aquietplace.jpeg" alt="">
+                <h4>A qulet place</h4>
                 <p>Subtitle</p>
               </a>
             </div>
-            <!-- box1 -->
+            <!-- box4 -->
             <div class="box uno">
               <a href="#">
-                <img src="img/metal_lifting.jpg" alt="">
-                <h4>Heavy Metal</h4>
+                <img src="img/split.jpeg" alt="">
+                <h4>Split</h4>
                 <p>Subtitle</p>
               </a>
             </div>
-            <!-- box1 -->
+            <!-- box5 -->
             <div class="box uno">
               <a href="#">
-                <img src="img/metal_lifting.jpg" alt="">
-                <h4>Heavy Metal</h4>
+                <img src="img/cure.jpeg" alt="">
+                <h4>A cure for wellness</h4>
                 <p>Subtitle</p>
               </a>
             </div>
-            <!-- box1 -->
+            <!-- box6 -->
             <div class="box uno">
               <a href="#">
-                <img src="img/metal_lifting.jpg" alt="">
-                <h4>Heavy Metal</h4>
+                <img src="img/sinister.jpeg" alt="">
+                <h4>Sinister</h4>
                 <p>Subtitle</p>
               </a>
             </div>
-
           </div>
         </section>
 
         <!-- seconda sezione -->
         <section>
-
+          <h2>Creato per john Doe</h2>
+          <p>Più ascoltati, più accurati saranno i suggerimenti</p>
+          <div class="conteiner-flex">
+            <!-- box1 -->
+            <div class="box uno">
+              <a href="#">
+                <img src="img/radar.jpeg" alt="">
+                <h4>Release Radar</h4>
+              </a>
+            </div>
+            <!-- box2 -->
+            <div class="box due">
+              <a href="#">
+                <img src="img/mixdaily.jpeg" alt="">
+                <h4>Dally Mix 1</h4>
+              </a>
+            </div>
+          </div>
         </section>
 
         <!-- terza sezione -->
         <section>
-
+          <h2>Artisti più popolari</h2>
+          <p>Più ascoltati, più accurati saranno i suggerimenti</p>
+          <div class="conteiner-flex">
+            <!-- box1 -->
+            <div class="box uno">
+              <a href="#">
+                <img src="img/youg.jpeg" alt="">
+                <h4>Release Radar</h4>
+              </a>
+            </div>
+            <!-- box2 -->
+            <div class="box due">
+              <a href="#">
+                <img src="img/einaudi.jpeg" alt="">
+                <h4>Dally Mix 1</h4>
+              </a>
+            </div>
+          </div>
         </section>
 
       </main>
