aggiunti hover vari

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="flex-nav">
         <a href="#">
           <img src="img/logo.svg" alt="logo">
+          <div id="logo-small">
+            <img src="img/logo-small.svg" alt="">
+          </div>
         </a>
         <div class="testo-upgrade">
           <a href="#">EFFETTUA L'UPGRADE</a>
@@ -24,7 +27,7 @@
     </div>
 
     <!-- inizio contenitore -->
-    <div class="conteiner">
+    <div class="container">
 
       <!-- playlist laterale sx -->
       <div class="col-playlist">
@@ -36,10 +39,10 @@
             <a href="#"><img src="img/home.svg" alt=""><strong>Home</strong></a>
           </div>
           <div class="icona-libreria">
-            <a href="#"><img src="img/search.svg" alt="">Cerca</a>
+            <a href="#"><img src="img/search.svg" alt=""><span>Cerca</span></a>
           </div>
           <div class="icona-libreria">
-            <a href="#"><img src="img/libreria.svg" alt="">La tua libreria</a>
+            <a href="#"><img src="img/libreria.svg" alt=""><span>La tua libreria</span></a>
           </div>
           <!-- sezione liste nuove -->
           <ul id="lista-sx">
@@ -66,7 +69,7 @@
 
         <!-- parte playlist giù -->
         <div id="col-playlist-giù">
-          <a href="#"><i class="far fa-arrow-alt-circle-down"></i> Installa app</a>
+          <a href="#"><i class="far fa-arrow-alt-circle-down"></i> <span>Installa app</span></a>
           <hr>
           <strong>John Doe</strong>
         </div>
@@ -108,8 +111,8 @@
 
         <!-- prima sezione -->
         <section>
-          <h2>Recently played</h2>
-          <div class="conteiner-flex">
+          <a href="#"><stron class="testo-album">Recently played</strong></a>
+          <div class="container-flex">
             <!-- box1 -->
             <div class="box uno">
               <a href="#">
@@ -127,7 +130,7 @@
               </a>
             </div>
             <!-- box3 -->
-            <div class="box uno">
+            <div class="box tre">
               <a href="#">
                 <img src="img/aquietplace.jpeg" alt="">
                 <h4>A qulet place</h4>
@@ -135,7 +138,7 @@
               </a>
             </div>
             <!-- box4 -->
-            <div class="box uno">
+            <div class="box quattro">
               <a href="#">
                 <img src="img/split.jpeg" alt="">
                 <h4>Split</h4>
@@ -143,7 +146,7 @@
               </a>
             </div>
             <!-- box5 -->
-            <div class="box uno">
+            <div class="box cinque">
               <a href="#">
                 <img src="img/cure.jpeg" alt="">
                 <h4>A cure for wellness</h4>
@@ -151,7 +154,7 @@
               </a>
             </div>
             <!-- box6 -->
-            <div class="box uno">
+            <div class="box sei">
               <a href="#">
                 <img src="img/sinister.jpeg" alt="">
                 <h4>Sinister</h4>
@@ -163,9 +166,9 @@
 
         <!-- seconda sezione -->
         <section>
-          <h2>Creato per john Doe</h2>
+          <a href="#"><stron class="testo-album">Creato per john Doe</strong></a>
           <p>Più ascoltati, più accurati saranno i suggerimenti</p>
-          <div class="conteiner-flex">
+          <div class="container-flex">
             <!-- box1 -->
             <div class="box uno">
               <a href="#">
@@ -185,9 +188,9 @@
 
         <!-- terza sezione -->
         <section>
-          <h2>Artisti più popolari</h2>
+          <a href="#"><stron class="testo-album">Artisti più popolari</strong></a>
           <p>Più ascoltati, più accurati saranno i suggerimenti</p>
-          <div class="conteiner-flex">
+          <div class="container-flex">
             <!-- box1 -->
             <div class="box uno">
               <a href="#">
@@ -231,7 +234,7 @@
         <a id="i-play" href="#"><i class="far fa-play-circle"></i></a>
         <a href="#"><i class="fas fa-step-forward"></i></a>
         <a href="#"><i class="fas fa-redo"></i></a>
-        <div class="conteiner-barra">
+        <div class="container-barra">
           <span>0:25</span>
           <div class="barra-player">
 
