--- a/index.html
+++ b/index.html
@@ -237,7 +237,11 @@
         <div class="container-barra">
           <span>0:25</span>
           <div class="barra-player">
+            <div class="seconda-barra-player">
+              <div class="cerchio-barra">
 
+              </div>
+            </div>
           </div>
           <span>4:25</span>
         </div>
@@ -248,7 +252,11 @@
         <a href="#"><i class="fas fa-tv"></i></a>
         <a href="#"><i class="fas fa-volume-up"></i></a>
         <div class="barra-player-dx">
+          <div class="seconda-barra-player">
+            <div class="cerchio-barra">
 
+            </div>
+          </div>
         </div>
       </div>
     </div>
