aggiunto javascript più foto profilo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
         <div id="col-playlist-giù">
           <a href="#"><i class="far fa-arrow-alt-circle-down"></i> <span>Installa app</span></a>
           <hr>
-          <strong>John Doe</strong>
+          <div>
+            <a href="#" id="foto-profilo">
+              <img src="img/profile.svg" alt="profilo">
+            </a>
+            <strong id="nome-utente"></strong>
+          </div>
         </div>
 
       </div>
@@ -116,7 +121,14 @@
             <!-- box1 -->
             <div class="box uno">
               <a href="#">
-                <img src="img/metal_lifting.jpg" alt="">
+
+                <div class="prova-album">
+                  <img src="img/metal_lifting.jpg" alt="">
+                  <div class="immagine-volante">
+                    <i class="far fa-play-circle"></i>
+                  </div>
+                </div>
+
                 <h4>Heavy Metal</h4>
                 <p>Subtitle</p>
               </a>
@@ -261,5 +273,8 @@
       </div>
     </div>
 
+    <!-- javascript -->
+    <script type="text/javascript" src="js/script.js">
+    </script>
   </body>
 </html>
